# hamals_lidar_toolbox

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: lidar.yaml
hamals_lidar_msgs/: CMakeLists.txt  package.xml
hamals_lidar_msgs/msg/: ObstacleRegionState.msg  ObstacleState.msg
include/hamals_lidar_toolbox/core/: ObstacleDetector.hpp  ScanData.hpp  ScanMetrics.hpp  ScanSanitizer.hpp  ScanSegmenter.hpp
include/hamals_lidar_toolbox/ros/adapters/: LaserScanAdapter.hpp
include/hamals_lidar_toolbox/ros/nodes/: scan_processor_node.hpp
include/hamals_lidar_toolbox/ros/rviz/: RvizDebugPublisher.hpp
install/: local_setup.sh  setup.sh
install/hamals_lidar_toolbox/share/hamals_lidar_toolbox/: package.bash  package.zsh
launch/: scan_processor.launch.py
log/: latest_build
ros/adapters/: LaserScanAdapter.cpp
ros/nodes/: scan_processor_node.cpp  scan_processor_node.hpp
ros/rviz/: RvizDebugPublisher.cpp
src/: test_core_pipeline.cpp
src/core/: ObstacleDetector.cpp  ScanData.cpp  ScanMetrics.cpp  ScanSanitizer.cpp  ScanSegmenter.cpp
src/ros/adapters/: LaserScanAdapter.cpp
src/ros/nodes/: scan_processor_node.cpp
src/ros/rviz/: RvizDebugPublisher.cpp
srv/: GetDistance.srv
